[package]
name = "ross-config"
version = "1.17.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Config helpers for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-config"
readme = "README.md"

[dependencies]
serde = "1.0.130"
ross-protocol = "1.20.0"

[dependencies.downcast-rs]
version = "1.2.0"
default-features = false

[dependencies.postcard]
version = "0.7.2"
features = ["alloc"]
