[package]
name = "ross-config"
version = "1.25.0"
authors = ["Linas NikiperaviÄius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Config helpers for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-config"
readme = "README.md"

[dependencies]
ross-protocol = "1.22.0"

[dependencies.downcast-rs]
version = "1.2.0"
default-features = false

[dependencies.serde]
version = "1.0.130"
features = ["alloc"]
default-features = false

[dependencies.postcard]
version = "0.7.2"
features = ["alloc"]
default-features = false
