[package]
name = "ross-config"
version = "2.27.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Config helpers for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-config"
readme = "README.md"

[dependencies]
ross-protocol = "2.6.0"

[dependencies.downcast-rs]
version = "1.2.0"
default-features = false

[dependencies.chrono]
version = "0.4.19"
default-features = false
